# ordinalswallet

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
.sqlx/: query-2731a2f0f51a368008a4bbbf68a8f29dba9e22a4b88e385f41330e8be1812437.json
src/: domain_length.rs  main.rs  model.rs
src/db/: mod.rs
src/db/repository/: mod.rs  sqlx_postgresql.rs
src/db/traits/: domains.rs  mod.rs
src/models/: inscription.rs  mod.rs
src/utils/: discord_webhook.rs  environment.rs  last_update.rs  mod.rs  request.rs
