[package]
name = "ordinalswallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
color-eyre = "0.6.2"
dotenv = "0.15.0"
paste = "1.0.14"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serial_test = "2.0.0"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio-rustls", "time"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
